# MedScraperAI

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  commits.txt  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: .gitkeep  0e1d5bf42375_initial_migration_create_articles_table.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: articles.py  health.py  scraper.py  summarizer.py  tasks.py
backend/app/core/: __init__.py  celery_app.py  config.py
backend/app/db/: __init__.py  async_session.py  async_utils.py  base.py  session.py
backend/app/models/: __init__.py  article.py
backend/app/schemas/: __init__.py  article.py
backend/app/services/: __init__.py  article_service.py  base_scraper.py  medical_news_today_scraper.py  scraper_service.py  summarizer_service.py
backend/app/tasks/: __init__.py  nlp.py  ping.py  scraper.py
backend/tests/: __init__.py  test_article_endpoints.py  test_summarizer_service.py
